bugfix: images clipped by negative row margin
+ XS footer roughly in place

--- a/code/css/home.css
+++ b/code/css/home.css
@@ -179,6 +179,7 @@ content: '';
 @media only screen and (max-width: 760px) {
     .container, .row, .col-xs-12 .container-fluid, .visible-xs-block { 
     padding: 0px !important;
+        margin: 0px;
 }
     html, body {
     /* overflow-x: hidden; */
@@ -266,8 +267,7 @@ content: '';
     }
     .xs-post img {
     width: 100%;
-    max-height: 100%;
-    max-width: 100%;
+    height: auto;
     padding: 0px;
     }
     .footer-home {
